--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -76,6 +76,7 @@
   angle: 0 deg;
 
   opacity: 1;
+  border-style: none;
   border: 2px;
   border-radius: 8px;
   background-color: rgba(33, 33, 33, 1);
