added media queries and styling

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -13,3 +13,10 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (max-width: 630px) {
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px;
+  }
+}
