--- a/blocks/card.css
+++ b/blocks/card.css
@@ -17,10 +17,16 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 12px 0 0;
 }
 
 .card__title {
-  margin: 12px 0 0;
+  margin: 0;
+  max-width: 85%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
   font-weight: 500;
   font-style: Medium;
   font-size: 20px;
@@ -31,11 +37,50 @@
 }
 
 .card__like-button {
-  margin-top: auto;
-  width: 23px;
+  margin: 0;
+  max-width: 23px;
+  width: 100%;
   height: 20px;
+  padding: 0;
 
   background-image: url(../images/like-icon.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
   opacity: 40%;
   border: none;
+}
+
+@media screen and (max-width: 630px) {
+  .card {
+    margin: 0;
+    padding: 0;
+    max-width: 288px;
+    width: 100%;
+  }
+  .card__image {
+    height: 288px;
+  }
+
+  .card__content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    padding-top: 12px;
+    width: 100%;
+  }
+  .card__title {
+    margin: 0;
+
+    font-size: 16px;
+    line-height: 100%;
+  }
+
+  .card__like-button {
+    margin: 0;
+
+    width: 20px;
+    height: 18px;
+  }
 }
