--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,6 +23,14 @@
 .profile__name {
   margin: 0 0 12px;
 
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+
+  max-width: 420px;
+
   font-weight: 500;
   font-style: Medium;
   font-size: 32px;
@@ -34,6 +42,12 @@
 
 .profile__description {
   margin: 0;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 
   font-weight: 500;
   font-style: Medium;
@@ -89,4 +103,47 @@
   line-height: 100%;
   letter-spacing: 0%;
   color: #fcf5e5;
+}
+
+@media screen and (max-width: 630px) {
+  .profile {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    max-width: 288px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px 0 20px;
+  }
+
+  .profile__avatar {
+    height: 80px;
+    width: 80px;
+    margin: 0 0 12px;
+  }
+
+  .profile__name {
+    margin: 0 0 6px;
+    max-width: 288px;
+    font-size: 20px;
+  }
+
+  .profile__description {
+    margin: 0 auto 32px;
+    max-width: 288px;
+  }
+
+  .profile__edit-button {
+    margin: 0 auto 20px;
+    font-size: 16px;
+  }
+
+  .profile__add-button {
+    justify-content: center;
+
+    width: 100%;
+    margin: 0;
+    padding: 18px auto;
+  }
 }
