--- a/blocks/card.css
+++ b/blocks/card.css
@@ -50,6 +50,10 @@
   border: none;
 }
 
+.card__like-button:hover {
+  opacity: 100%;
+}
+
 @media screen and (max-width: 630px) {
   .card {
     margin: 0;
