--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -78,6 +78,10 @@
   letter-spacing: 0%;
 }
 
+.profile__edit-button:hover {
+  opacity: 100%;
+}
+
 .profile__add-button {
   display: flex;
   margin-top: auto;
@@ -103,6 +107,10 @@
   line-height: 100%;
   letter-spacing: 0%;
   color: #fcf5e5;
+}
+
+.profile__add-button:hover {
+  background-color: rgba(33, 33, 33, 0.8);
 }
 
 @media screen and (max-width: 630px) {
