fixed all css syntax issues

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -32,11 +32,10 @@
   max-width: 420px;
 
   font-weight: 500;
-  font-style: Medium;
+  font-style: normal;
   font-size: 32px;
-  leading-trim: NONE;
   line-height: 100%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
   color: rgba(33, 33, 33, 1);
 }
 
@@ -50,11 +49,10 @@
   max-width: 420px;
 
   font-weight: 500;
-  font-style: Medium;
+  font-style: normal;
   font-size: 16px;
-  leading-trim: NONE;
   line-height: 100%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
   color: rgba(33, 33, 33, 0.7);
 }
 
@@ -71,11 +69,10 @@
 
   font-family: Poppins;
   font-weight: 500;
-  font-style: Medium;
+  font-style: normal;
   font-size: 16px;
-  leading-trim: NONE;
   line-height: 100%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
 }
 
 .profile__edit-button:hover {
@@ -91,7 +88,6 @@
 
   width: 149px;
   height: 52px;
-  angle: 0 deg;
 
   opacity: 1;
   border-style: none;
@@ -101,9 +97,8 @@
 
   font-family: Poppins;
   font-weight: 500;
-  font-style: Medium;
+  font-style: normal;
   font-size: 16px;
-  leading-trim: NONE;
   line-height: 100%;
   letter-spacing: 0%;
   color: #fcf5e5;
@@ -152,6 +147,6 @@
 
     width: 100%;
     margin: 0;
-    padding: 18px auto;
+    padding: 18px 0;
   }
 }
