--- a/blocks/card.css
+++ b/blocks/card.css
@@ -28,11 +28,10 @@
   white-space: nowrap;
 
   font-weight: 500;
-  font-style: Medium;
+  font-style: normal;
   font-size: 20px;
-  leading-trim: NONE;
   line-height: 120%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
   color: rgba(33, 33, 33, 1);
 }
 
