--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -8,9 +8,8 @@
   margin: 0;
 
   font-weight: 400;
-  font-style: Regular;
+  font-style: normal;
   font-size: 16px;
-  leading-trim: NONE;
   line-height: 100%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
 }
