--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -67,7 +67,7 @@
   border: none;
   opacity: 70%;
 
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 16px;
@@ -95,7 +95,7 @@
   border-radius: 8px;
   background-color: rgba(33, 33, 33, 1);
 
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 16px;
