--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -15,6 +15,10 @@
 }
 
 @media screen and (max-width: 630px) {
+  .cards {
+    padding-bottom: 20px;
+  }
+
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
     gap: 20px;
