--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,6 +7,7 @@
 .footer__copyright {
   margin: 0;
 
+  color: rgba(33, 33, 33, 0.7);
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
