--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -85,7 +85,7 @@
   display: flex;
   margin-top: auto;
   margin-left: auto;
-  padding: 18px 24px;
+  padding: 18px 0 18px 24px;
   gap: 8px;
 
   width: 149px;
