--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,5 +1,6 @@
 .modal {
   visibility: hidden;
+  opacity: 0;
   position: fixed;
   top: 0;
   right: 0;
@@ -10,6 +11,7 @@
   align-items: center;
 
   background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.2s ease, visibility 0s linear 0.3s;
 }
 
 .modal__popup {
@@ -23,7 +25,9 @@
 }
 
 .modal_is-opened {
+  opacity: 1;
   visibility: visible;
+  transition: opacity 0.2s ease, visibility 0s linear 0s;
 }
 
 .modal__title {
