--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -69,7 +69,7 @@
   font-weight: 500;
   font-style: normal;
   font-size: 16px;
-  line-height: 110.00000000000001%;
+  line-height: 110%;
 
   color: rgba(33, 33, 33, 0.7);
 }
@@ -116,6 +116,10 @@
   border-style: none;
   background-color: rgba(33, 33, 33, 1);
   color: rgba(252, 245, 229, 1);
+}
+
+.modal__submit-button:hover {
+  background: rgba(33, 33, 33, 0.8);
 }
 
 @media screen and (max-width: 630px) {
