--- a/blocks/card.css
+++ b/blocks/card.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   max-width: 413px;
+  position: relative;
 }
 
 .card__image {
@@ -35,6 +36,26 @@
   color: rgba(33, 33, 33, 1);
 }
 
+.card__delete_button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+  width: 32px;
+  height: 32px;
+
+  background: none;
+  background-image: url(../images/delete-icon.svg);
+  border: none;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.card__delete_button:hover {
+  background-image: url(../images/delete-icon-hover.svg);
+}
+
 .card__like-button {
   margin: 0;
   max-width: 23px;
@@ -42,6 +63,7 @@
   height: 20px;
   padding: 0;
 
+  background: none;
   background-image: url(../images/like-icon.svg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -53,6 +75,15 @@
 
 .card__like-button:hover {
   opacity: 100%;
+}
+
+.card__like-button_active {
+  background-image: url(../images/like-active-icon.svg);
+  opacity: 100%;
+}
+
+.card__like-button_active:hover {
+  opacity: 40%;
 }
 
 @media screen and (max-width: 630px) {
