--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -30,6 +30,42 @@
   transition: opacity 0.2s ease, visibility 0s linear 0s;
 }
 
+#modal-image-container {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  max-width: fit-content;
+}
+
+.modal__image {
+  display: block;
+  max-width: 80vw;
+  width: 100%;
+  max-height: 80vh;
+  object-fit: contain;
+  border-radius: 8px;
+}
+
+.modal__image-caption {
+  margin: 4px auto 0 0;
+  padding: 4px 8px;
+  max-width: 214px;
+  width: fit-content;
+  height: 32px;
+
+  border-radius: 8px;
+  background: rgba(33, 33, 33, 1);
+  color: rgba(255, 255, 255, 1);
+
+  font-family: Poppins;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 120%;
+  letter-spacing: 0%;
+}
+
 .modal__title {
   margin: 32px 0 0 50px;
   font-weight: 500;
@@ -54,6 +90,12 @@
 .modal__close-button:hover {
   opacity: 100%;
   cursor: pointer;
+}
+
+#image-close-button {
+  position: absolute;
+  top: 0;
+  right: -52.5px;
 }
 
 .modal__form {
@@ -149,5 +191,10 @@
 
   .modal__submit-button {
     max-width: none;
+  }
+
+  #image-close-button {
+    top: -48px;
+    right: 0;
   }
 }
