--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -47,7 +47,7 @@
   border-radius: 8px;
 }
 
-.modal__image-caption {
+.modal__image_caption {
   margin: 4px auto 0 0;
   padding: 4px 8px;
   max-width: 214px;
