feature: add and edit handlers to include esc and click to close modal

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -27,7 +27,7 @@
 .modal_is-opened {
   opacity: 1;
   visibility: visible;
-  transition: opacity 0.2s ease, visibility 0s linear 0s;
+  transition: opacity 0.5s ease, visibility 0s linear 0s;
 }
 
 #modal-image-container {
@@ -143,11 +143,11 @@
 }
 
 .modal__input-error {
-  border-color: red;
+  border: 1px solid rgba(255, 0, 0, 0.6);
 }
 
 .modal__input-error:hover {
-  border-color: red;
+  border: 1.5px solid rgba(255, 0, 0, 1);
 }
 
 .modal__error {
