fix: remove a wrong value in modal css

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -63,7 +63,7 @@
   font-style: normal;
   font-size: 20px;
   line-height: 120%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
 }
 
 .modal__title {
